Corrección de entities con todo el equipo

--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,12 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
-    </dependencies>
+        <dependency>
+        	<groupId>com.unla</groupId>
+        	<artifactId>grupo12</artifactId>
+        	<version>0.0.1-SNAPSHOT</version>
+        </dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
