--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/bd-grupo12
     username: root
-    password: root
+    password: 1234
   jpa:
     show-sql: true
     hibernate:
