--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,22 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-        	<groupId>com.unla</groupId>
-        	<artifactId>grupo12</artifactId>
-        	<version>0.0.1-SNAPSHOT</version>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-beans</artifactId>
+    <version>6.0.9</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
